--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language:
 - objective-c
 env:
   global:
-    - NUMPY_VERSION="1.8.2" SEABREEZE_VERSION="3.0.10.2"
+    - SEABREEZE_VERSION="3.0.11.11"
   matrix:
-    - PYTHON_VERSION="2.7.11" 
-    - PYTHON_VERSION="3.4.4"
-    - PYTHON_VERSION="3.5.1"
+    - PYTHON_VERSION="2.7.13" 
+    - PYTHON_VERSION="3.5.3"
+    - PYTHON_VERSION="3.6.1"
 install: source travis/build_wheel.sh
 script:
 - echo "done."
