--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,113 @@
-language:
-- objective-c
-env:
-  global:
-  - SEABREEZE_VERSION="3.0.11.11"
-  matrix:
-  - PYTHON_VERSION="2.7.13"
-  - PYTHON_VERSION="3.5.3"
-  - PYTHON_VERSION="3.6.1"
-install: source travis/build_wheel.sh
+language: python
+
+matrix:
+  include:
+    - name: "Python 2.7 3.[567] manylinux1 x86_64 via docker"
+      sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+           PLAT=manylinux1_x86_64
+      before_install:
+        - docker pull $DOCKER_IMAGE
+      install:
+        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build_manylinux_wheels.sh
+
+    - name: "Python 2.7 3.[567] manylinux1 i686 via docker"
+      sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+           PRE_CMD=linux32
+           PLAT=manylinux1_i686
+      before_install:
+        - docker pull $DOCKER_IMAGE
+      install:
+        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build_manylinux_wheels.sh
+
+    - name: "Python 2.7 on macOS"
+      os: osx
+      osx_image: xcode9.4
+      language: shell
+      env: PYTHON_VERSION=2.7
+      install:
+        - source travis/build_osx_wheels.sh
+
+    - name: "Python 3.5 on macOS"
+      os: osx
+      osx_image: xcode9.4
+      language: shell
+      env: PYTHON_VERSION=3.5
+      install:
+        - source travis/build_osx_wheels.sh
+
+    - name: "Python 3.6 on macOS"
+      os: osx
+      osx_image: xcode9.4
+      language: shell
+      env: PYTHON_VERSION=3.6
+      install:
+        - source travis/build_osx_wheels.sh
+
+    - name: "Python 3.7 on macOS"
+      os: osx
+      osx_image: xcode9.4
+      language: shell
+      env: PYTHON_VERSION=3.7
+      install:
+        - source travis/build_osx_wheels.sh
+
+    - name: "Python 2.7 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python2 vcredist2008
+        - choco install --ignore-dependencies vcpython27
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
+      install:
+        - source travis/build_windows_wheels.sh
+
+    - name: "Python 3.5 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python3 --version 3.5.4
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python35:/c/Python35/Scripts:$PATH
+      install:
+        - source travis/build_windows_wheels.sh
+
+    - name: "Python 3.6 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python3 --version 3.6.8
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
+      install:
+        - source travis/build_windows_wheels.sh
+
+    - name: "Python 3.7 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python3 --version 3.7.4
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
+      install:
+        - source travis/build_windows_wheels.sh
+
 script:
-- echo "done."
+  - ls wheelhouse/*.whl
+  - echo "done."
+
 deploy:
   provider: releases
   skip_cleanup: true
   file_glob: true
   file:
-      - dist/*.whl
+    - wheelhouse/*.whl
   api_key:
     secure: hDbhZMLLmvid2U9VuFBRkdduRMnsLnUvZzSnzJE96NSrGd/rcHM0GXUiVEOpVqHJmygBSVekTVjk7wOvljWvyxTfa4qd1/hdkKNbUbhWCBC1pXsPLLsnb2xLu8s6YHJc4bu0ZE3imm+6gAaABHB6SZe9P0c21L40TDh6Ew2VY1g=
   on:
