--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,7 @@ matrix:
       before_install:
         - choco install python2 vcredist2008
         - choco install --ignore-dependencies vcpython27
+        - choco install visualcpp-build-tools
         - python -m pip install --upgrade pip
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
       install:
@@ -73,6 +74,7 @@ matrix:
       language: shell
       before_install:
         - choco install python3 --version 3.5.4
+        - choco install visualcpp-build-tools
         - python -m pip install --upgrade pip
       env: PATH=/c/Python35:/c/Python35/Scripts:$PATH
       install:
@@ -83,6 +85,7 @@ matrix:
       language: shell
       before_install:
         - choco install python3 --version 3.6.8
+        - choco install visualcpp-build-tools
         - python -m pip install --upgrade pip
       env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
       install:
@@ -93,6 +96,7 @@ matrix:
       language: shell
       before_install:
         - choco install python3 --version 3.7.4
+        - choco install visualcpp-build-tools
         - python -m pip install --upgrade pip
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
       install:
