--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,7 @@ matrix:
         - choco install python2 vcredist2008
         - choco install --ignore-dependencies vcpython27
         - choco install visualcpp-build-tools
+        - choco install windowsdriverkit10
         - python -m pip install --upgrade pip
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
       install:
@@ -75,6 +76,7 @@ matrix:
       before_install:
         - choco install python3 --version 3.5.4
         - choco install visualcpp-build-tools
+        - choco install windowsdriverkit10
         - python -m pip install --upgrade pip
       env: PATH=/c/Python35:/c/Python35/Scripts:$PATH
       install:
@@ -86,6 +88,7 @@ matrix:
       before_install:
         - choco install python3 --version 3.6.8
         - choco install visualcpp-build-tools
+        - choco install windowsdriverkit10
         - python -m pip install --upgrade pip
       env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
       install:
@@ -97,6 +100,7 @@ matrix:
       before_install:
         - choco install python3 --version 3.7.4
         - choco install visualcpp-build-tools
+        - choco install windowsdriverkit10
         - python -m pip install --upgrade pip
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
       install:
