--- a/.travis.yml
+++ b/.travis.yml
@@ -64,11 +64,12 @@ matrix:
         - choco install python2 vcredist2008
         - choco install --ignore-dependencies vcpython27
         - choco install visualcpp-build-tools
-        - choco install windows-sdk-10.1
+        - choco install windows-sdk-8.1
         - choco install windowsdriverkit10
         - python -m pip install --upgrade pip
         - python -m pip install --upgrade wheel
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
+           SBBUILDSDK=8.1
       install:
         - source travis/build_windows_wheels.sh
 
@@ -83,6 +84,7 @@ matrix:
         - python -m pip install --upgrade pip
         - python -m pip install --upgrade wheel
       env: PATH=/c/Python35:/c/Python35/Scripts:$PATH
+           SBBUILDSDK=10.0.17134.0
       install:
         - source travis/build_windows_wheels.sh
 
@@ -97,6 +99,7 @@ matrix:
         - python -m pip install --upgrade pip
         - python -m pip install --upgrade wheel
       env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
+           SBBUILDSDK=10.0.17134.0
       install:
         - source travis/build_windows_wheels.sh
 
@@ -111,6 +114,7 @@ matrix:
         - python -m pip install --upgrade pip
         - python -m pip install --upgrade wheel
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
+           SBBUILDSDK=10.0.17134.0
       install:
         - source travis/build_windows_wheels.sh
 
