--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,9 +2,7 @@ environment:
 
   matrix:
 
-    # For Python versions available on Appveyor, see
-    # http://www.appveyor.com/docs/installed-software#python
-
+    # 32bit pythons
     - PYTHON: C:\Python27
       WDDK_INC_PATH: C:\WinDDK\7600.16385.1\inc\api;C:\WinDDK\7600.16385.1\inc\ddk;
       WDDK_LIB_PATH: C:\WinDDK\7600.16385.1\lib\wxp\i386;
@@ -12,6 +10,7 @@ environment:
     - PYTHON: C:\Python36
     - PYTHON: C:\Python37
 
+    # 64bit pythons
     - PYTHON: C:\Python27-x64
       WDDK_INC_PATH: C:\WinDDK\7600.16385.1\inc\api;C:\WinDDK\7600.16385.1\inc\ddk;
       WDDK_LIB_PATH: C:\WinDDK\7600.16385.1\lib\wlh\amd64;
