--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
       before_install:
         - docker pull $DOCKER_IMAGE
       install:
-        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build_manylinux_wheels.sh
+        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/ci/build_manylinux_wheels.sh
 
     - name: "Python 2.7 3.[567] manylinux1 i686 via docker"
       sudo: required
@@ -23,7 +23,7 @@ matrix:
       before_install:
         - docker pull $DOCKER_IMAGE
       install:
-        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build_manylinux_wheels.sh
+        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/ci/build_manylinux_wheels.sh
 
     - name: "Python 2.7 on macOS"
       os: osx
@@ -31,7 +31,7 @@ matrix:
       language: shell
       env: PYTHON_VERSION=2.7
       install:
-        - source travis/build_osx_wheels.sh
+        - source ci/build_osx_wheels.sh
 
     - name: "Python 3.5 on macOS"
       os: osx
@@ -39,7 +39,7 @@ matrix:
       language: shell
       env: PYTHON_VERSION=3.5
       install:
-        - source travis/build_osx_wheels.sh
+        - source ci/build_osx_wheels.sh
 
     - name: "Python 3.6 on macOS"
       os: osx
@@ -47,7 +47,7 @@ matrix:
       language: shell
       env: PYTHON_VERSION=3.6
       install:
-        - source travis/build_osx_wheels.sh
+        - source ci/build_osx_wheels.sh
 
     - name: "Python 3.7 on macOS"
       os: osx
@@ -55,7 +55,7 @@ matrix:
       language: shell
       env: PYTHON_VERSION=3.7
       install:
-        - source travis/build_osx_wheels.sh
+        - source ci/build_osx_wheels.sh
 
 script:
   - ls wheelhouse/seabreeze*.whl
