setup.py: use pkgconfig

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,8 @@
 [build-system]
-requires = ["setuptools>=18.0", "cython>=0.18", "wheel", "setuptools_scm"]
+requires = [
+    "setuptools>=18.0",
+    "cython>=0.18",
+    "wheel>=0.31.0",
+    "setuptools_scm",
+    "pkgconfig"  # this should be Linux only, but PEP508 is not supported yet in pyproject.toml
+    ]
