--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,10 +3,13 @@ channels:
   - conda-forge
 dependencies:
   - python=3.7
-  - cython
   - numpy
-  - libusb-compat
   - pip
   - setuptools
+  - cython
   - wheel
+  - setuptools_scm
+  - pkgconfig
+  - libusb-compat
+  - pkg-config
 
