--- a/.travis.yml
+++ b/.travis.yml
@@ -1,74 +1,62 @@
 language: python
-
 matrix:
   include:
-    - name: "Python 2.7 3.[567] manylinux1 x86_64 via docker"
-      sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
-           PLAT=manylinux1_x86_64
-      before_install:
-        - docker pull $DOCKER_IMAGE
-      install:
-        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/ci/build_manylinux_wheels.sh
-
-    - name: "Python 2.7 3.[567] manylinux1 i686 via docker"
-      sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
-           PRE_CMD=linux32
-           PLAT=manylinux1_i686
-      before_install:
-        - docker pull $DOCKER_IMAGE
-      install:
-        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/ci/build_manylinux_wheels.sh
-
-    - name: "Python 2.7 on macOS"
-      os: osx
-      osx_image: xcode9.4
-      language: shell
-      env: PYTHON_VERSION=2.7
-      install:
-        - source ci/build_osx_wheels.sh
-
-    - name: "Python 3.5 on macOS"
-      os: osx
-      osx_image: xcode9.4
-      language: shell
-      env: PYTHON_VERSION=3.5
-      install:
-        - source ci/build_osx_wheels.sh
-
-    - name: "Python 3.6 on macOS"
-      os: osx
-      osx_image: xcode9.4
-      language: shell
-      env: PYTHON_VERSION=3.6
-      install:
-        - source ci/build_osx_wheels.sh
-
-    - name: "Python 3.7 on macOS"
-      os: osx
-      osx_image: xcode9.4
-      language: shell
-      env: PYTHON_VERSION=3.7
-      install:
-        - source ci/build_osx_wheels.sh
-
+  - name: Python 2.7 3.[567] manylinux1 x86_64 via docker
+    sudo: required
+    services:
+    - docker
+    env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64 PLAT=manylinux1_x86_64
+    before_install:
+    - docker pull $DOCKER_IMAGE
+    install:
+    - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/ci/build_manylinux_wheels.sh
+  - name: Python 2.7 3.[567] manylinux1 i686 via docker
+    sudo: required
+    services:
+    - docker
+    env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686 PRE_CMD=linux32 PLAT=manylinux1_i686
+    before_install:
+    - docker pull $DOCKER_IMAGE
+    install:
+    - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/ci/build_manylinux_wheels.sh
+  - name: Python 2.7 on macOS
+    os: osx
+    osx_image: xcode9.4
+    language: shell
+    env: PYTHON_VERSION=2.7
+    install:
+    - source ci/build_osx_wheels.sh
+  - name: Python 3.5 on macOS
+    os: osx
+    osx_image: xcode9.4
+    language: shell
+    env: PYTHON_VERSION=3.5
+    install:
+    - source ci/build_osx_wheels.sh
+  - name: Python 3.6 on macOS
+    os: osx
+    osx_image: xcode9.4
+    language: shell
+    env: PYTHON_VERSION=3.6
+    install:
+    - source ci/build_osx_wheels.sh
+  - name: Python 3.7 on macOS
+    os: osx
+    osx_image: xcode9.4
+    language: shell
+    env: PYTHON_VERSION=3.7
+    install:
+    - source ci/build_osx_wheels.sh
 script:
-  - ls wheelhouse/seabreeze*.whl
-  - echo "done."
-
+- ls wheelhouse/seabreeze*.whl
+- echo "done."
 deploy:
   provider: releases
   skip_cleanup: true
-  file_glob: true
-  file:
-    - wheelhouse/seabreeze*.whl
   api_key:
-    secure: hDbhZMLLmvid2U9VuFBRkdduRMnsLnUvZzSnzJE96NSrGd/rcHM0GXUiVEOpVqHJmygBSVekTVjk7wOvljWvyxTfa4qd1/hdkKNbUbhWCBC1pXsPLLsnb2xLu8s6YHJc4bu0ZE3imm+6gAaABHB6SZe9P0c21L40TDh6Ew2VY1g=
+    secure: H+xEsgW3rABG9meFzNSYaopnB5pvF9BXMBVH8uxAu/oWDcuJn43q9aoCdz0uD+URi2iwtYs+7KjNbKK/hMMKpJd1CXc73Qzyvvp8CRSDJGwZkg9G7NSBj18LLeTPBCHMY7C0KyPmsRkGQwDULmkQdQkmxJlhoWNfCjNHb8jamZA=
+  file_glob: true
+  file: wheelhouse/seabreeze*.whl
   on:
     all_branches: true
     tags: true
