--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -23,7 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install 'setuptools>=18.0' 'cython>=0.18' 'wheel>=0.31.0' 'pytest<5'
+        pip install --upgrade setuptools
+        pip install 'cython>=0.18' 'wheel>=0.31.0' 'pytest<5' 'mock'
         pip install -e .[pyseabreeze]
     - name: Test with pytest
       run: |
