--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,6 +9,7 @@ environment:
     - PYTHON: C:\Python35
     - PYTHON: C:\Python36
     - PYTHON: C:\Python37
+    - PYTHON: C:\Python38
 
     # 64bit pythons
     - PYTHON: C:\Python27-x64
@@ -17,6 +18,7 @@ environment:
     - PYTHON: C:\Python35-x64
     - PYTHON: C:\Python36-x64
     - PYTHON: C:\Python37-x64
+    - PYTHON: C:\Python38-x64
 
 install:
   # Setup the build environment
