--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,29 @@ requires = [
     "setuptools_scm",
     "pkgconfig"  # this should be Linux only, but PEP508 is not supported yet in pyproject.toml
     ]
+
+[tool.black]
+line-length = 88
+target-version = ['py27']
+include = '\.pyi?$'
+exclude = '''
+(
+  /(
+      \.eggs
+    | \.git
+    | \.mypy_cache
+    | \.venv
+    | venv.*
+    | build
+    | dist
+    | ci
+  )/
+)
+'''
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
