--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
 
     steps:
     - uses: actions/checkout@v1
@@ -25,7 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade setuptools
         pip install 'cython>=0.18' 'wheel>=0.31.0' 'pytest<5' 'mock'
-        pip install -e .[pyseabreeze]
+        pip install -e .[pyseabreeze, tests]
     - name: Test with pytest
       run: |
-        python setup.py pytest
+        pytest
