--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -1,10 +1,10 @@
-name: run tests
+name: test build deploy
 
 on: [push, pull_request]
 
 jobs:
-  build:
-
+  tests:
+    name: Run py ${{ matrix.python-version }} tests
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
@@ -12,18 +12,85 @@ jobs:
         python-version: [3.6, 3.7, 3.8, 3.9, '3.10.0-beta - 3.10']
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2.2.2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Setup libusb-dev
-      run: |
-        sudo apt-get install -y libusb-dev
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .[pyseabreeze,tests]
-    - name: Test with pytest
-      run: |
-        pytest
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2.2.2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Setup libusb-dev
+        run: |
+          sudo apt-get install -y libusb-dev
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[pyseabreeze,tests]
+      - name: Test with pytest
+        run: |
+          pytest
+
+  build_sdist:
+    name: Build sdist on Linux
+    needs: [tests]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2.2.2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+      - name: Install pep517
+        run: >-
+          python -m
+          pip install
+          pep517
+          --user
+      - name: Build the source tarball
+        run: >-
+          python -m
+          pep517.build
+          --source
+          --out-dir dist/
+      - uses: actions/upload-artifact@v2
+        with:
+          name: sdist
+          path: ./dist
+
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
+    needs: [tests]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      max-parallel: 3
+      matrix:
+        os: [ubuntu-20.04, windows-2019, macOS-10.15]
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.1.2
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
+      - uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: ./wheelhouse/*.whl
+
+  deploy_pypi:
+    name: deploy to pypi
+    needs: [build_sdist, build_wheels]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          path: ./dist
+      # push all tagged versions to pypi.org
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.pypi_password }}
