--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -41,18 +41,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-      - name: Install pep517
-        run: >-
-          python -m
-          pip install
-          pep517
-          --user
+      - name: Install build
+        run: python -m pip install build --user
       - name: Build the source tarball
-        run: >-
-          python -m
-          pep517.build
-          --source
-          --out-dir dist/
+        run: python -m build --sdist .
       - uses: actions/upload-artifact@v2
         with:
           name: sdist
