[docs] update note

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 github: ap--
-custom: ['https://www.buymeacoffee.com/poehlmann', 'https://paypal.me/apoehlmann']
+custom: ['https://www.buymeacoffee.com/poehlmann']
