--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,15 @@ before-build = "yum install -y libusb-devel"
 
 [tool.mypy]
 python_version = "3.7"
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
 warn_return_any = true
 warn_unused_configs = true
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
 files = "./src/**/*.py"
 exclude = """
 (?x)(
