--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -7,9 +7,9 @@ jobs:
     name: Run py ${{ matrix.python-version }} tests
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 5
+      max-parallel: 4
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.7', '3.8', '3.9', '3.10']
 
     steps:
       - uses: actions/checkout@v2
