--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,17 +13,26 @@ repos:
     hooks:
     -   id: black
         language_version: python3
+-   repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+    -   id: isort
 -   repo: https://github.com/PyCQA/flake8
     rev: '4.0.1'
     hooks:
-        -   id: flake8
-            additional_dependencies:
-                -    flake8-typing-imports==1.7.0
-            language_version: python3
-            exclude: "^(build|docs|tests|setup.py)"
+    -   id: flake8
+        additional_dependencies:
+        -    flake8-typing-imports==1.7.0
+        language_version: python3
+        exclude: "^(build|docs|tests|setup.py)"
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.930'
     hooks:
     -   id: mypy
         additional_dependencies: [numpy, pyusb>=1.0]
         exclude: "^(build|docs|tests|setup.py)"
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v2.31.0
+    hooks:
+    -   id: pyupgrade
+        args: [--py37-plus]
