--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -72,6 +72,15 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.1.2
       - name: Build wheels
+        env:
+          SEABREEZE_DISABLE_FH4: "yes"
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_TEST_EXTRAS: "pyseabreeze"
+          CIBW_TEST_COMMAND: >
+            python -c "import seabreeze"
+            python -c "import seabreeze.types"
+            python -c "import seabreeze.cseabreeze"
+            python -c "import seabreeze.pyseabreeze"
         run: python -m cibuildwheel --output-dir wheelhouse
       - uses: actions/upload-artifact@v2
         with:
