--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -70,10 +70,11 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v2
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.1.2
+        run: python -m pip install "cibuildwheel==2.3.*"
       - name: Build wheels
         env:
           SEABREEZE_DISABLE_FH4: "yes"
+          CIBW_SKIP: "*-musllinux_*"
           CIBW_BUILD_VERBOSITY: 1
           CIBW_TEST_EXTRAS: "pyseabreeze"
           CIBW_TEST_COMMAND: >
