[ci] disable pp38 and move config to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,17 @@ profile = "black"
 py_version = "37"
 force_single_line = true
 
+[tool.cibuildwheel]
+build-verbosity = 2
+skip = ["*-musllinux_*", "pp38-*"]
+test-extras = ["pyseabreeze"]
+test-command = [
+    "python -c 'import seabreeze'",
+    "python -c 'import seabreeze.types'",
+    "python -c 'import seabreeze.cseabreeze'",
+    "python -c 'import seabreeze.pyseabreeze'",
+]
+
 [tool.cibuildwheel.linux]
 before-build = "yum install -y libusb-devel"
 
