--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ force_single_line = true
 
 [tool.cibuildwheel]
 build-verbosity = 2
-skip = ["*-musllinux_*", "pp38-*"]
+skip = ["*-musllinux_*", "pp*"]
 test-extras = ["pyseabreeze"]
 test-command = [
     "python -c \"import seabreeze\"",
