--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -76,7 +76,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
       - name: Build wheels
