--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -64,6 +64,7 @@ jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
     needs: [tests]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 3
