--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -85,7 +85,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up QEMU
-        if: runner.os == 'Linux' && ${{ matrix.arch }} != 'x86_64'
+        if: ${{ runner.os == 'Linux' && matrix.arch != 'x86_64' }}
         uses: docker/setup-qemu-action@v2
         with:
           platforms: all
