pre-commit add cython-lint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,3 +72,6 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = "usb.*"
 ignore_missing_imports = true
+
+[tool.cython-lint]
+ignore = ['E501']
