docs: add missing rtd deps

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,8 +9,9 @@ build:
 sphinx:
   configuration: docs/source/conf.py
 python:
-   install:
-      - method: pip
-        path: .
-        extra_requirements:
-          - pyseabreeze
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+        - pyseabreeze
