--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -66,7 +66,7 @@ jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }} - ${{ matrix.arch }}
     needs: [tests]
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') || github.event_name == 'workflow_dispatch'
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 5
