ci: disable building aarch64 linux wheels for now

--- a/.github/workflows/run_test_build_deploy.yaml
+++ b/.github/workflows/run_test_build_deploy.yaml
@@ -78,8 +78,8 @@ jobs:
           - 'windows-latest'
           - 'macOS-latest'
         include:
-          - os: 'ubuntu-latest'
-            arch: 'aarch64'
+          # - os: 'ubuntu-latest'
+          #   arch: 'aarch64'
           - os: 'macOS-latest'
             arch: 'arm64'
     steps:
